web/themes/custom/glazed_subtheme/css/style.css
/* ... */
.path-search nav.pager-nav.text-center {
  text-align: left !important;
}

.path-search .pagination > li {
  display: inline;
  border-radius: 0px;
}

.path-search .pagination > li > a {
  border-top-left-radius: 0px !important;
  border-bottom-left-radius: 0px !important;
  margin-right: 4px !important;
  border: 1px solid #eaeaea;
  font-size: 13px;
  font-weight: 400;
  color: #0054A4;
  background: transparent;
  height: 41px;
  line-height: 41px;
  padding-top: 0px;
  padding-bottom: 0px;
  font-family: "Open Sans", arial, sans-serif;
}

.path-search .pagination > li > a:hover,.path-search .pagination > li.active > a {
    background: transparent;
    color: #0b88ff;
    border-color: #bbb;
}
/*Space Css ends*/

#rocket.page-node-type-landing-page .view-id-landing_image
{
    padding-top:0px !important;
}
#block-rocketlandingcontentwithimage .az-element.az-ctnr.az-column.col-sm-4 {
    padding-left: 0;
    padding-right: 0;
}
.human-exploration-category-view .views-col{
    padding-left: 4px;
    padding-right: 4px;
}
.az-ctnr.container{
    width:auto !important;
}
#rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title {
    left: 0 !important;
}
#rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title {
    margin: -51px auto 0;
}

body.path-search a:hover, body.path-search a:focus {
  color: #0b88ff;
  text-decoration: none;
}

body.path-search ol, body.path-search ul {
  padding-left: 3em;
}

body.path-search ol.pagination, body.path-search ul.pagination {
  padding-left: 1.5em;
}
#rocket.path-search ol li{
    margin-bottom: 1rem;
    padding: 1rem 0 0.3rem 0;
    border-top: 1px solid white;
}
#rocket.path-search  ol li:first-child {
    border-top: none;
}
.pager__item.pager__item--first
{
    position: relative;
}
.pager__item.pager__item--first span {
  text-indent: -9999px;
  font-size: 0px;
}
.pager__item.pager__item--first span::after {
  position: absolute;
  content: "\f105";
  font-family: 'FontAwesome';
  left:0px;
  top:0px;
}


/*----- 23-aug-2022------*/
#block-rocketlandingcontentwithimage .az-ctnr.container {
    width: auto;
    padding: 0;
}
#block-rocketlandingcontentwithimage .az-ctnr.container .col-sm-4
{
    padding-left: 0px !important;
    padding-right: 0px !important;
}
#rocket.page-node-type-landing-page .view-id-landing_image
{
    padding-top: 0px !important;
}
#rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title
{
    left: 0px !important;
}
.row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col
{
    padding-bottom: 8px;
}
.row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col:first-child
{
    padding-left: 0px;
}
.row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col:last-child
{
    padding-right: 0px;
}
.glazed-fluid.content-top-container {
    overflow: hidden;
}
.landing-list-item .landing-list-button a.landing-list-button-inner
{
    text-indent: 0 !important;
}
#rocket .view-display-id-categories .landing-list-item .landing-list-button
{
    width: 30px !important;
}
#rocket .landing-list-item .landing-list-button i
{
    font-size: 23px !important;
    color: #fff;
    line-height: normal !important;
    width: auto !important;
}
@media only screen and (max-width: 1024px) {
    .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col {
    padding-left: 0px;
    padding-right: 0px;
    width: 100% !important;
}
    #rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title {
    margin: 30px 0px 0;
}
    #block-rocketlandingcontentwithimage .az-ctnr.container {
    padding: 0 15px;
}
}
/*----- 23-aug-2022------*/

